Fix issue on mobile where text goes off screen for airport opts

--- a/css/main-custom.css
+++ b/css/main-custom.css
@@ -1,3 +1,8 @@
 .top-nav-collapse {
     background-color: #FF9900;
 }
+
+.dropdown-menu, .dropdown-menu li a {
+    max-width: 300px;
+    white-space: normal;
+}
